@@ -5040,7 +5040,7 @@ include_once 'include/discovery.inc.php';
 		$tblMntc->AddRow(array(S_ACTIVE_TILL, $filtertimetab));
 //-------			
 		
-		$tblMntc->AddRow(array(S_DESCRIPTION, new CTextArea('description', $description,50,5)));
+		$tblMntc->AddRow(array(S_DESCRIPTION, new CTextArea('description', $description,66,5)));
 
 
 		$tblMaintenance = new CTableInfo();
